src/test/resources/purescript_examples/failing/DeclConflictDuplicateCtor.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith DeclConflict\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('T')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeArgs)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Fail')
        PsiElement(whitespace)(' ')
        PsiElement(|)('|')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Fail')
        PsiElement(whitespace)('\n\n')
